[package]
name = "roboclaw"
version = "0.1.0"
authors = ["Marek Miettinen <marek.miettinen@gmail.com>"]
description = "Roboclaw DC motor controller"
license = "MIT"
edition = "2021"
categories = ["hardware-support"]
keywords = ["roboclaw", "basicmicro", "motor"]
readme = "README.md"
documentation = "https://github.com/marikka/roboclaw-rs"
homepage = "https://github.com/marikka/roboclaw-rs"
repository = "https://github.com/marikka/roboclaw-rs"

[dependencies]
serialport = "4.1.0"
crc16 = "0.4.0"
bitflags = "1.0.4"
