[package]
name = "roboclaw"
version = "0.1.0"
authors = ["Marek Miettinen <marek.miettinen@gmail.com>"]
description = "Roboclaw DC motor controller"
license = "MIT"
edition = "2018"
categories = ["hardware-support"]
keywords = ["roboclaw", "basicmicro", "motor"]
readme = "README.md"
documentation = "https://github.com/marikka/roboclaw-rs"
homepage = "https://github.com/marikka/roboclaw-rs"
repository = "https://github.com/marikka/roboclaw-rs"

[dependencies]
embedded-hal = "0.2.7"
crc16 = "0.4.0"
bitflags = "1.0.4"
nb = "1.1.0"
heapless = "0.7.16"

[dev-dependencies]
serialport = "4.2.1"
